k8s/dashboards/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "grafana.flowforge.fun"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
