k8s/dashboards/headlamp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: kube-system
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "dashboards.flowforge.fun"
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
