k8s/dashboards/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: dashboard-gateway
    namespace: gateway
  hostnames:
  - "keycloak.flowforge.fun"
  rules:
  - backendRefs:
    - name: keycloak
      port: 8080
